[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
simplelog = "0.12.2"
thiserror = "2.0.6"
